src/components/chessboards/GameView.css
.game-view {
  display: flex;
  flex-direction: column;
  gap: 0.8rem;
}

.player-info {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  gap: 0.5rem;
}

.flex-row {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 0.5rem;
}

.time {
  background-color: #c0c6dc;
  border-radius: 16px;
  padding: 4px 25px;
}
.time.active {
  background-color: #32618d;
  color: #ffffff;
}

.board-eval {
  display: flex;
  flex-direction: row;
  align-items: center;
  align-items: stretch;
  gap: 0.5rem;
}

